# scrapy-selenium-seleniumwire

./: Dockerfile  README.md  setup.cfg  setup.py  spider.py
scrapy_selenium_seleniumwire/: middlewares.py
