[metadata]
name = scrapy-selenium-seleniumwire
version = 0.0.1
url = https://github.com/attackercan/scrapy-selenium-seleniumwire
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy with selenium and seleniumwire
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
